# website

./: .editorconfig  .envrc  .gitattributes  .gitignore  404.html  CNAME  LICENSE  README.md  default.nix  flake.nix  index.html  shell.nix  treefmt.toml  website.cabal  website.nix
.github/workflows/: build.yaml  build.yml
builder/: LICENSE  Main.hs  builder.cabal
css/: default.css
generator/: LICENSE  default.nix  site.hs  website.cabal
nix/: sources.json
pages/: about.md  contact.md
posts/: 2022-10-14-hello-world.md  2024-12-01-the-start-of-a-topiary-adventure.md
src/: Main.hs
templates/: default.html
