name:               website
version:            0.1.0.0
author:             polykernel
build-type:         Simple
cabal-version:      >= 1.10

executable hakyll-site
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
