name:          builder
version:       0.1.0
synopsis:      Website builder for polykernel.cc
description:   Website builder for polykernel.cc
author:        polykernel
build-type:    Simple
cabal-version: >=1.10
license:       MIT
license-file:  LICENSE

executable site-builder
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      base    >=4.17 && <5
    , hakyll  >=4.16
    , pandoc  >=3.5
