name:               website
version:            0.1.0.0
author:             polykernel
build-type:         Simple
cabal-version:      >= 1.10
license:            MIT
license-file:       LICENSE

executable hakyll-site
  main-is:          site.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , pandoc == 3.*